[tool.poetry]
name = "pdf-tools-noannot-unpw-py"
version = "0.9.4"
description = "PDF delete all annotation or unlock for editing"
authors = ["theangkko <theangkko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pikepdf = "^8.6.0"
ttkbootstrap = "^1.10.1"
tkinterdnd2 = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
